--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,81 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Xinjing Wang
+    - name: Location
+      value: Bochum, Germany
     - name: Languages
-      value: English, German
+      value: Chinese (native), German (C1), English (IELTS 7, C1)
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: M.Sc. in Economics and Finance
+      institution: Eberhard Karls Universität Tübingen
+      year: 10/2021 – 11/2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - 'Master thesis: "Analyzing Influential Factors and Forecasting Renewable Electricity Consumption – Using Time Series and Deep Learning Techniques."'
+        - 'Seminar paper: "Not All Oil Price Shocks Are Alike: Which One Mostly Determines the Real Price of Oil?"'
+
+    - title: Intensive German Course (B2 & C1)
+      institution: Ruhr-Universität Bochum
+      year: 08/2024 – 05/2025
+
+    - title: B.Sc. in Accounting
+      institution: Tianjin University of Finance and Economics
+      year: 09/2017 – 06/2021
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Intern, Finance Accounting (Accounts Receivable)
+      institution: Accenture, Chengdu, China
+      year: 11/2020 – 04/2021
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+        - Managed receivables workflows using ERP systems (Oracle, SAP).
+        - Supported daily operations of AR and general ledger accounting for a large listed pharmaceutical company (SPH Inc., China).
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Sales Reporting & Dashboard Development (Tableau)
+      year: 07/2025 – 08/2025
+      description:
+        - Built interactive crosstabs in Tableau to analyze sales data.
+        - Consolidated sales data and created a data model using union and join operations.
+        - Created a dynamic dashboard for efficient KPI exploration.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: Automated Reporting & Dashboard for Internet Credit Data
+      year: 06/2025 – 07/2025
+      description:
+        - Used advanced Excel formulas (SUMIFS, VLOOKUP/INDEX-MATCH) for monthly reporting and multi-criteria metrics.
+        - Automated data cleaning with Power Query, reducing manual effort by ~80%.
+        - Built interactive dashboards and PivotTables with one-click refresh.
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+    - title: Data Querying & Analysis in Google BigQuery
+      year: 05/2025 – 07/2025
+      description:
+        - Queried and analyzed data via Python APIs and SQL in BigQuery.
+        - Wrote complex SQL (JOINs, subqueries, CTEs, window functions) to consolidate datasets.
 
-- title: Other Interests
+    - title: Forecasting Renewable Electricity Consumption
+      year: 11/2023 – 05/2024
+      description:
+        - Developed deep-learning forecasting models in Python (NumPy, Pandas, PyTorch, Seaborn).
+        - Applied classical time-series models in Stata (VAR, seasonal ARMA) for comparison and validation.
+
+    - title: Time Series Analysis & Shock Modeling (MATLAB & Dynare)
+      year: 06/2023 – 09/2023
+      description:
+        - Analyzed time-series data in MATLAB, including impulse response and shock analysis.
+        - Modeled macroeconomic systems in Dynare, focusing on DSGE models.
+
+- title: Technical Skills
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Excel, Power Query, Tableau
+    - SQL, Google BigQuery
+    - Python (NumPy, Pandas, PyTorch)
+    - Stata
+    - MATLAB, Dynare
+    - LaTeX, Microsoft Office
